force-app/main/default/objects/Subject_Property__c.object
<CustomObject>
    <label>Subject Property</label>
    <nameField>
        <label>Subject Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subject Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>