force-app/main/default/objects/Subject_Property__c/fields/Annual_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Tax_Amount__c</fullName>
    <label>Annual Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>