force-app/main/default/objects/Subject_Property__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Subject Properties</relationshipLabel>
    <relationshipName>Subject_Properties</relationshipName>
    <type>Lookup</type>
</CustomField>